--- a/src/App.css
+++ b/src/App.css
@@ -149,6 +149,48 @@ button{
     display: none;
 }
 
+/* LINK STYLES */
+
+.link-items{
+    display: flex;
+    max-width: 1152px;
+    flex-direction: column;
+    width: 100%;
+    gap:24px;
+}
+
+.link-items a{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color:rgba(16, 24, 40, 1);
+    font-weight: 500;
+    font-size: 18px;
+    line-height: 28px;
+    border-radius: 8px;
+    border: 1px solid #EAECF0;
+    height: 76px;
+    background-color: #EAECF0;
+}
+
+.link-items a:hover{
+    background-color: #D0D5DD;
+    border-color: #D0D5DD;
+}
+.link-items a:focus{
+    background-color: #EAECF0;
+    border-color: #98A2B3;
+   
+}
+.link-items a[disabled]{
+    background-color: #FCFCFD;
+    border: 1px solid #F2F4F7;
+    box-shadow: 0px 1px 2px rgba(16, 24, 40, 0.05);
+    cursor: not-allowed;
+    pointer-events: none;
+}
+
+
 /* MEDIA QUERIES */
 @media (max-width: 992px) {
     .profile .wrapper .share,.profile .wrapper .more{
@@ -182,5 +224,8 @@ button{
         position: absolute;
         
         
+    }
+    .link-items a{
+        height: 68px;
     }
 }
