--- a/src/App.css
+++ b/src/App.css
@@ -190,6 +190,14 @@ button{
     pointer-events: none;
 }
 
+/* SOCIALS ICONS STYLES */
+.socials.wrapper{
+    max-width: 1216px;
+    display: flex;
+    padding: 24px 0;
+    gap:24px
+}
+
 
 /* MEDIA QUERIES */
 @media (max-width: 992px) {
