--- a/src/App.css
+++ b/src/App.css
@@ -9,11 +9,17 @@ button{
     background: transparent;
     cursor: pointer;
 }
+p, h2{
+    margin: 0;
+    padding: 0;
+}
 .App{
     display: flex;
     font-family: Inter;
     flex-direction: column;
     align-items: center;
+}
+.App:has(.profile){
     padding-top: 64px;
     padding-inline: 16px; 
 }
@@ -34,6 +40,9 @@ button{
     flex-direction: column;
     align-items: center;
     gap: 18.5px;
+}
+.profile .socials.wrapper{
+    flex-direction: row;
 }
 
 .more-wrapper:hover,.share-wrapper:hover{
@@ -78,7 +87,7 @@ button{
 .profile .wrapper .share:hover,.profile .wrapper .more:hover{
     background-color: #F9FAFB;
 }
-.share-wrapper:hover .share-link{
+.share-wrapper:hover ~ .share-link{
     display: block;
 }
 .profile .wrapper .share:focus-within,.profile .wrapper .more:focus-within{
@@ -193,7 +202,7 @@ button{
 /* SOCIALS ICONS STYLES */
 .socials.wrapper{
     max-width: 1216px;
-    display: flex;
+    /* display: flex; */
     padding: 24px 0;
     gap:24px
 }
@@ -280,8 +289,8 @@ footer div.dic{
     .link-items a{
         height: 68px;
     }
-    footer{
-        padding: 32px;
+    footer .dic{
+        padding-inline: 17px;
     }
     .footer{
        flex-direction: column;
@@ -304,4 +313,298 @@ footer div.dic{
         font-size: 14px;
     }
     
+}
+
+
+.contact{
+    padding-top: 0;
+    padding-inline: 16px;
+    max-width: 1216px;
+    margin: 64px auto 96px;
+}
+.contact .container{
+    min-width: 720px;
+    margin: 92px auto;
+    display: flex;
+    flex-direction: column;
+    gap: 48px;
+}
+.container div.title {
+    display:flex;
+    flex-direction: column;
+    gap: 20px;
+}
+.container div.title h2{
+font-family: 'Inter';
+font-style: normal;
+font-weight: 600;
+font-size: 36px;
+line-height: 44px;
+/* identical to box height, or 122% */
+
+letter-spacing: -0.02em;
+
+/* Gray/900 */
+
+color: #101828;
+}
+.container div.title p{
+    font-family: 'Inter';
+font-style: normal;
+font-weight: 400;
+font-size: 20px;
+line-height: 30px;
+/* identical to box height, or 150% */
+
+
+/* Gray/600 */
+
+color: #475467;
+}
+.contact-form > div{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    gap:24px;
+}
+.contact-form .firstname{
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+    gap: 24px;
+}
+label:not(label[for="consent"]){
+    font-family: 'Inter';
+font-style: normal;
+font-weight: 500;
+font-size: 14px;
+line-height: 20px;
+/* identical to box height, or 143% */
+
+
+/* Gray/700 */
+
+color: #344054;
+}
+
+label[for="consent"]{
+    font-family: 'Inter';
+font-style: normal;
+font-weight: 400;
+font-size: 16px;
+line-height: 24px;
+/* identical to box height, or 150% */
+
+
+/* Gray/600 */
+
+color: #475467;
+}
+
+ input:not(input[type="checkbox"]),textarea,button{
+    box-sizing: border-box;
+    width: 100%;
+    font-size: 16px;
+    line-height: 24px;
+    padding: 10px 14px;
+    outline: none;
+    background: #FFFFFF;
+    color: #101828;
+    /* Gray/300 */
+
+    border: 1px solid #D0D5DD;
+    /* Shadow/xs */
+
+    box-shadow: 0px 1px 2px rgba(16, 24, 40, 0.05);
+    border-radius: 8px;
+}
+
+input[type="checkbox"]{
+    box-sizing: border-box;
+outline: none;
+width: 20px;
+height: 20px;
+
+/* Base/White */
+
+background: #FFFFFF;
+/* Gray/300 */
+
+border: 1px solid #D0D5DD;
+border-radius: 6px;
+}
+input[type="checkbox"]:checked + label::after {
+    content: '';
+    position: absolute;
+    width: 1ex;
+    height: 0.4ex;
+    background: rgba(0, 0, 0, 0);
+    top: 1.05ex;
+    left: 0.58ex;
+    border: 2px solid #1570EF;
+    border-top: none;
+    border-right: none;
+    -webkit-transform: rotate(-45deg);
+    -moz-transform: rotate(-45deg);
+    -o-transform: rotate(-45deg);
+    -ms-transform: rotate(-45deg);
+    transform: rotate(-45deg);
+ }
+
+ input[type="checkbox"] {
+    line-height: 2.1ex;
+ }
+
+
+ input[type="checkbox"] {
+     position: absolute;
+     left: -999em;
+ }
+ input[type="checkbox"] + label {
+    position: relative;
+    cursor: pointer;
+}
+
+input[type="checkbox"] + label::before {
+   content: "";
+   display: inline-block;
+   vertical-align: -25%;
+   height: 2ex;
+   width: 2ex;
+  
+   background: #FFFFFF;
+   /* Gray/300 */
+   
+   border: 1px solid #D0D5DD;
+   border-radius: 6px;
+ 
+ 
+   margin-right: 0.5em;
+}
+input[type="checkbox"]:checked + label::before {
+    border: 1px solid #1570EF;
+}
+input[type="checkbox"]:focus + label::before{
+    border: 1px solid #84CAFF;
+box-shadow: 0px 0px 0px 4px #D1E9FF;
+}
+textarea{
+    padding: 12px 14px;
+    height: 132px;
+    resize: none;
+}
+textarea:placeholder-shown, input:placeholder-shown{
+    font-family: 'Inter';
+font-style: normal;
+font-weight: 400;
+font-size: 16px;
+line-height: 24px;
+/* or 150% */
+
+
+/* Gray/500 */
+
+color: #667085;
+}
+input:not(label[for="consent"]):focus{
+    background: #FFFFFF;
+    /* Primary/300 */
+    
+    border: 1px solid #84CAFF;
+}
+
+textarea:focus{
+    background: #FFFFFF;
+/* Primary/300 */
+
+border: 1px solid #84CAFF;
+box-shadow: 0px 1px 2px rgba(16, 24, 40, 0.05), 0px 0px 0px 4px #D1E9FF;
+}
+textarea.error, input:not(input[type="checkbok"]).error{
+    border: 1px solid #F89687;
+}
+textarea.error:focus{
+    border: 1px solid #F89687;
+box-shadow: 0px 1px 2px rgba(16, 24, 40, 0.05), 0px 0px 0px 4px #FFD3CC;
+}
+.error-message{
+    display: none;
+    font-family: 'Inter';
+font-style: normal;
+font-weight: 500;
+font-size: 14px;
+line-height: 20px;
+/* identical to box height, or 143% */
+
+
+color: #F83F23;
+}
+input:not(input[type="checkbok"]).error ~ .error-message, textarea.error ~ .error-message{
+    display: block;
+}
+.contact-form .input-wrapper{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    gap:5px;
+}
+.contact-form .input-checkbox{
+    display: flex;
+    gap:5px;
+}
+
+#btn__submit{
+    color: white;
+    background: #1570EF;
+/* Primary/600 */
+border: 1px solid #1570EF;
+/* Shadow/xs */
+box-shadow: 0px 1px 2px rgba(16, 24, 40, 0.05);
+border-radius: 8px;
+
+}
+
+
+#btn__submit:hover{
+    background: #175CD3;
+    /* Primary/700 */
+    
+    border: 1px solid #175CD3;
+}
+#btn__submit:focus{
+    background: #1570EF;
+/* Primary/600 */
+
+border: 1px solid #1570EF;
+box-shadow: 0px 1px 2px rgba(16, 24, 40, 0.05), 0px 0px 0px 4px #D1E9FF;
+}
+#btn__submit:disabled{
+    
+    background: #B2DDFF;
+    /* Primary/200 */
+    
+    border: 1px solid #B2DDFF;
+    cursor: not-allowed;
+    pointer-events: none;
+}
+@media (max-width: 720px) {
+    .contact{
+        padding-inline: 16px;
+        margin: auto;
+    }
+    .contact .container{
+        margin: 64px auto;
+        min-width: 0;
+        max-width: 720px;
+    }
+}
+@media (max-width: 576px){
+    .container div.title p{
+        font-weight: 400;
+font-size: 18px;
+line-height: 28px;
+    }
+    .contact-form .firstname{
+        flex-direction: column;
+    }
 }
